--- a/record/public-enterprise/index.html
+++ b/record/public-enterprise/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<base href="{{https://github.com/Tokyo-M-A/githubpages/blob/master/}}" charset="utf-8"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no">
 <title>公営企業委員会の記録 ｜ 東京都議会</title>
-<link rel="stylesheet" href="../../styles/common.css">
+<link rel="stylesheet" href="https://github.com/Tokyo-M-A/githubpages/blob/master/styles/common.css">
 <!--[if lt IE 8]><!--><link rel="stylesheet" href="../../styles/ie7.css"><!--<![endif]-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
